[package]
name = "evm-relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.32.0"
serde = "1.0.188"
simperby-core = "0.2.0"
simperby-evm-client = { path = "src/simperby-evm/client" }
tokio = { version = "1", features = ["full"] }
dotenv_codegen = "0.15"
simperby-settlement = { path = "./src/simperby-evm/settlement" }
reqwest = "0.11.20"
serde_json = "1.0.105"
header = "0.1.1"
value = "0.1.1"
hex = "0.4.3"
