[package]
name = "simperby-evm-client"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
rust_decimal = "1.25.0"
simperby-settlement = { path = "../settlement" }
simperby-core = "0.2.0"
eyre = "0.6.8"
ethers = "2.0.0"
ethers-providers = "2.0.0"
ethers-core = "2.0.0"
dotenvy_macro = "0.15.7"
hex = "0.4.3"
